--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "chalk": "^5.3.0",
     "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.6.0",
-    "esno": "^4.7.0",
     "fast-glob": "^3.3.2",
     "nodemon": "^3.1.4",
     "rimraf": "^5.0.7",
-    "tsup": "^8.1.0",
+    "tsup": "^8.4.0",
     "typescript": "^5.7.0",
     "unplugin": "^1.11.0",
-    "unplugin-raw": "^0.3.1",
+    "unplugin-raw": "^0.4.4",
+    "vite": "^6.0.0",
     "vitest": "^1.6.0"
   },
   "pnpm": {
