--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
-    "types": ["vite/client"],
+    "types": [
+      "vite/client",
+      "@vue-macros/reactivity-transform/macros-global.d.ts"
+    ],
     "strict": true,
     "strictNullChecks": true,
     "esModuleInterop": true,
