--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "dev": "pnpm run --filter=\"./packages/*\" --parallel dev",
     "build": "pnpm run --filter=\"./packages/*\" build",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "tsmc --noEmit",
     "lint": "eslint .",
     "play": "npm -C playground run dev",
     "test": "vitest",
@@ -30,24 +30,20 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.21.2",
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.7",
-    "@sxzz/eslint-config": "^3.13.0",
-    "@types/node": "^20.14.9",
-    "bumpp": "^9.4.1",
-    "chalk": "^5.3.0",
+    "@antfu/eslint-config": "^4.8.1",
+    "@changesets/changelog-github": "^0.5.1",
+    "@changesets/cli": "^2.28.1",
+    "@sxzz/eslint-config": "^6.0.2",
+    "@ts-macro/tsc": "^0.1.24",
+    "@types/node": "^22.13.10",
+    "@vue-macros/reactivity-transform": "3.0.0-beta.4",
+    "bumpp": "^10.0.3",
     "conventional-changelog-cli": "^5.0.0",
-    "eslint": "^9.6.0",
-    "fast-glob": "^3.3.2",
-    "nodemon": "^3.1.4",
-    "rimraf": "^5.0.7",
+    "eslint": "^9.22.0",
     "tsup": "^8.4.0",
-    "typescript": "^5.7.0",
-    "unplugin": "^1.11.0",
+    "typescript": "^5.8.2",
     "unplugin-raw": "^0.4.4",
-    "vite": "^6.0.0",
-    "vitest": "^1.6.0"
+    "vite": "catalog:"
   },
   "pnpm": {
     "overrides": {
