--- a/packages/macros/package.json
+++ b/packages/macros/package.json
@@ -177,14 +177,16 @@
     "@vue/compiler-sfc": "catalog:",
     "@vue/language-core": "^2.2.8",
     "hash-sum": "^2.0.0",
-    "ts-macro": "catalog:"
+    "ts-macro": "catalog:",
+    "unplugin": "catalog:"
   },
   "devDependencies": {
-    "@babel/types": "7.26.9",
+    "@babel/types": "catalog:",
+    "@nuxt/kit": "catalog:",
+    "@nuxt/schema": "catalog:",
     "@types/hash-sum": "^1.0.2",
     "@vue-macros/test-utils": "3.0.0-beta.4",
-    "vue": "catalog:",
-    "@nuxt/kit": "^3.12.3",
-    "@nuxt/schema": "^3.12.3"
+    "vitest": "catalog:",
+    "vue": "catalog:"
   }
 }
