--- a/packages/unplugin/package.json
+++ b/packages/unplugin/package.json
@@ -203,21 +203,16 @@
     "@vue-jsx-vapor/compiler": "workspace:*",
     "@vue-jsx-vapor/macros": "workspace:*",
     "@vue-macros/volar": "3.0.0-beta.4",
-    "magic-string-stack": "^0.1.1",
+    "magic-string-stack": "^0.1.2",
     "ts-macro": "catalog:",
-    "unplugin": "^1.11.0",
+    "unplugin": "catalog:",
     "unplugin-utils": "^0.2.4"
   },
   "devDependencies": {
-    "@nuxt/kit": "^3.12.3",
-    "@nuxt/schema": "^3.12.3",
+    "@nuxt/kit": "catalog:",
+    "@nuxt/schema": "catalog:",
     "@types/babel__core": "catalog:",
-    "rollup": "^4.18.0",
-    "tsup": "^8.1.0",
-    "typescript": "^5.5.3",
-    "vite": "^6.0.0",
-    "vitest": "^1.6.0",
-    "vue": "catalog:",
-    "webpack": "^5.92.1"
+    "vitest": "catalog:",
+    "vue": "catalog:"
   }
 }
