--- a/playground/package.json
+++ b/playground/package.json
@@ -9,9 +9,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "unplugin-vue-jsx-vapor": "workspace:*",
-    "vite": "^6.0.0",
+    "vite": "catalog:",
     "vite-hyper-config": "^0.5.0",
-    "vite-plugin-inspect": "^0.8.4",
+    "vite-plugin-inspect": "^0.8.9",
     "vue": "catalog:"
   }
 }
