--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,13 +3,18 @@ packages:
   - playground
 
 catalog:
-  '@vue/compiler-dom': https://pkg.pr.new/@vue/compiler-dom@ce35a8c
-  '@vue/compiler-vapor': https://pkg.pr.new/@vue/compiler-vapor@ce35a8c
-  '@vue/shared': https://pkg.pr.new/@vue/shared@ce35a8c
-  '@vue/compiler-sfc': https://pkg.pr.new/@vue/compiler-sfc@ce35a8c
-  vue: https://pkg.pr.new/vue@ce35a8c
-  '@babel/types': ^7.26.8
   '@babel/core': ^7.26.8
   '@babel/parser': ^7.26.8
+  '@babel/types': ^7.26.8
+  '@nuxt/kit': ^3.16.0
+  '@nuxt/schema': ^3.16.0
   '@types/babel__core': ^7.20.5
+  '@vue/compiler-dom': https://pkg.pr.new/@vue/compiler-dom@ce35a8c
+  '@vue/compiler-sfc': https://pkg.pr.new/@vue/compiler-sfc@ce35a8c
+  '@vue/compiler-vapor': https://pkg.pr.new/@vue/compiler-vapor@ce35a8c
+  '@vue/shared': https://pkg.pr.new/@vue/shared@ce35a8c
   ts-macro: 0.1.21
+  unplugin: ^1.16.1
+  vite: ^6.2.1
+  vitest: ^3.0.8
+  vue: https://pkg.pr.new/vue@ce35a8c
