--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -67,6 +67,7 @@
     "@types/babel__core": "catalog:",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__template": "^7.4.4",
-    "@types/babel__traverse": "^7.20.6"
+    "@types/babel__traverse": "^7.20.6",
+    "vitest": "catalog:"
   }
 }
