--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -59,7 +59,6 @@
     "@babel/types": "catalog:",
     "@vue/compiler-dom": "catalog:",
     "@vue/compiler-vapor": "catalog:",
-    "@vue/shared": "catalog:",
-    "vitest": "catalog:"
+    "@vue/shared": "catalog:"
   }
 }
