--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -34,11 +34,11 @@ jobs:
     strategy:
       matrix:
         node: [18.x]
-        os: [
-          ubuntu-latest,
+        os:
+          - ubuntu-latest
           # windows-latest, TODO: hash-sum result different with linux
-          macos-latest
-        ]
+          - macos-latest
+
       fail-fast: false
 
     steps:
