chore: rename to vue-jsx-vapor

--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -11,13 +11,13 @@
     "babel"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/unplugin/unplugin-vue-jsx-vapor#readme",
+  "homepage": "https://github.com/vuejs/vue-jsx-vapor#readme",
   "bugs": {
-    "url": "https://github.com/unplugin/unplugin-vue-jsx-vapor/issues"
+    "url": "https://github.com/vuejs/vue-jsx-vapor/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/unplugin/unplugin-vue-jsx-vapor.git"
+    "url": "git+https://github.com/vuejs/vue-jsx-vapor.git"
   },
   "files": [
     "dist"
