--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "vite",
     "webpack",
     "rollup",
-    "transform"
+    "transform",
+    "vue-jsx",
+    "volar",
+    "vapor",
+    "babel",
+    "compiler"
   ],
   "license": "MIT",
   "homepage": "https://github.com/vuejs/vue-jsx-vapor#readme",
@@ -30,9 +35,6 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.8.1",
-    "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.28.1",
     "@sxzz/eslint-config": "^6.0.2",
     "@ts-macro/tsc": "^0.1.24",
     "@types/node": "^22.13.10",
