--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "play": "npm -C playground run dev",
     "test": "vitest",
     "release": "bumpp -r --all -x 'pnpm run changelog'",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "docs:dev": "pnpm run -C ./docs dev",
+    "docs:preview": "pnpm run -C ./docs preview",
+    "docs:build": "pnpm run -C ./docs build"
   },
   "devDependencies": {
     "@sxzz/eslint-config": "^6.0.2",
