--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@sxzz/eslint-config": "^6.0.2",
     "@ts-macro/tsc": "^0.1.24",
     "@types/node": "^22.13.10",
-    "@vue-macros/reactivity-transform": "3.0.0-beta.4",
+    "@vue-macros/reactivity-transform": "catalog:",
     "bumpp": "^10.0.3",
     "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.22.0",
