--- a/packages/macros/package.json
+++ b/packages/macros/package.json
@@ -172,7 +172,7 @@
     }
   },
   "dependencies": {
-    "@vue-macros/common": "3.0.0-beta.4",
+    "@vue-macros/common": "catalog:",
     "@vue/compiler-sfc": "catalog:",
     "@vue/language-core": "^2.2.8",
     "hash-sum": "^2.0.0",
@@ -184,7 +184,7 @@
     "@nuxt/kit": "catalog:",
     "@nuxt/schema": "catalog:",
     "@types/hash-sum": "^1.0.2",
-    "@vue-macros/test-utils": "3.0.0-beta.4",
+    "@vue-macros/test-utils": "catalog:",
     "vue": "catalog:"
   }
 }
