feat(vue-jsx-vapor): support hmr

--- a/packages/vue-jsx-vapor/package.json
+++ b/packages/vue-jsx-vapor/package.json
@@ -217,10 +217,12 @@
   "dependencies": {
     "@babel/core": "catalog:",
     "@babel/plugin-transform-typescript": "catalog:",
+    "@types/hash-sum": "catalog:",
     "@vue-jsx-vapor/babel": "workspace:*",
     "@vue-jsx-vapor/compiler": "workspace:*",
     "@vue-jsx-vapor/macros": "workspace:*",
     "@vue-macros/volar": "catalog:",
+    "hash-sum": "catalog:",
     "ts-macro": "catalog:",
     "unplugin": "catalog:",
     "unplugin-utils": "catalog:"
@@ -230,6 +232,6 @@
     "@nuxt/schema": "catalog:",
     "@types/babel__core": "catalog:",
     "csstype": "^3.1.3",
-    "vue": "catalog:"
+    "vue": "link:/Users/zmj/Documents/core/packages/vue"
   }
 }
