--- a/packages/macros/package.json
+++ b/packages/macros/package.json
@@ -175,7 +175,7 @@
     "@vue-macros/common": "catalog:",
     "@vue/compiler-sfc": "catalog:",
     "@vue/language-core": "^2.2.8",
-    "hash-sum": "^2.0.0",
+    "hash-sum": "catalog:",
     "ts-macro": "catalog:",
     "unplugin": "catalog:"
   },
@@ -183,7 +183,7 @@
     "@babel/types": "catalog:",
     "@nuxt/kit": "catalog:",
     "@nuxt/schema": "catalog:",
-    "@types/hash-sum": "^1.0.2",
+    "@types/hash-sum": "catalog:",
     "@vue-macros/test-utils": "catalog:",
     "vue": "catalog:"
   }
