--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -29,9 +29,11 @@ catalog:
   '@vue-macros/test-utils': *vue-macros
   '@vue-macros/volar': *vue-macros
 
+  '@types/hash-sum': ^1.0.2
+  hash-sum: ^2.0.0
   ts-macro: ^0.1.25
   unplugin: ^1.16.1
   unplugin-utils: ^0.2.4
   vite: ^6.2.1
   vitest: ^3.0.8
-  vue: https://pkg.pr.new/vue@3e7464f
+  vue: https://pkg.pr.new/vue@b43f4f5
