--- a/packages/vue-jsx-vapor/package.json
+++ b/packages/vue-jsx-vapor/package.json
@@ -232,6 +232,6 @@
     "@nuxt/schema": "catalog:",
     "@types/babel__core": "catalog:",
     "csstype": "^3.1.3",
-    "vue": "link:/Users/zmj/Documents/core/packages/vue"
+    "vue": "catalog:"
   }
 }
