docs: fix build

--- a/docs/package.json
+++ b/docs/package.json
@@ -7,11 +7,13 @@
     "build": "vitepress build",
     "preview": "vitepress preview"
   },
+  "dependencies": {
+    "vue": "catalog:",
+    "vue-jsx-vapor": "workspace:*"
+  },
   "devDependencies": {
     "@shikijs/vitepress-twoslash": "^3.2.1",
     "@ts-macro/twoslash": "^0.0.3",
-    "vitepress": "^2.0.0-alpha.4",
-    "vue": "catalog:",
-    "vue-jsx-vapor": "workspace:*"
+    "vitepress": "^2.0.0-alpha.4"
   }
 }
